# nominatim-converter

./: AGENTS.md  Cargo.toml  README.md  converter.example.json
.github/workflows/: build.yml
src/: config.rs  main.rs
src/common/: category.rs  coordinate.rs  country.rs  extra.rs  geo.rs  importance.rs  input.rs  mod.rs  text.rs  translator.rs  util.rs
src/source/: belagenhet.rs  matrikkel.rs  osm.rs  poi.rs  stopplace.rs
src/source/belagenhet/: convert.rs  municipalities.rs
src/source/matrikkel/: mod.rs
src/source/osm/: mod.rs
src/source/poi/: mod.rs
src/source/stedsnavn/: mod.rs
src/source/stopplace/: mod.rs
