[package]
name = "nominatim-convert"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
quick-xml = { version = "0.37", features = ["serialize"] }
csv = "1"
osmpbf = "0.3"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
proj = "0.28"
country-boundaries = "1"

[profile.release]
lto = true
